Fix TemplateUrl::MatchesData comparison of search_terms_replacement_key (reland) Also fixed linked bug in TemplateURLService::RepairPrepopulatedEngines which started to reproduce after first fix.

This is reland of https://codereview.chromium.org/2516963002
and https://codereview.chromium.org/2524733008.
"Current TemplateUrl constructor performs replacement of
search_terms_replacement_key field after initialization from
TemplateURLData. This replacement was not handled correctly in
TemplateUrl::MatchesData function. As result, TemplateUrl created from
TemplateUrlData for google engine could not be matched to its own
source data."
Also fixed linked bug in TemplateURLService::RepairPrepopulatedEngines -
after RepairPrepopulatedEngines sync guid preference was not updated correctly.

R=pkasting@chromium.org, vasilii@chromium.org
BUG=686399

TEST=Ensure that https://bugs.chromium.org/p/chromium/issues/detail?id=680197 and https://bugs.chromium.org/p/chromium/issues/detail?id=690345 are fixed.

Review-Url: https://codereview.chromium.org/2659353002
Cr-Commit-Position: refs/heads/master@{#450937}

Former-commit-id: 02d3f50b4f9429a499eb1604bf315f0ce03163a1