components/google/core/browser/google_util.h
@@ -24,6 +24,11 @@ bool HasGoogleSearchQueryParam(base::StringPiece str);
 // The query key that identifies a Google Extended API request for Instant.
 const char kInstantExtendedAPIParam[] = "espv";
 
+constexpr char kGoogleInstantExtendedEnabledKey[] =
+    "google:instantExtendedEnabledKey";
+constexpr char kGoogleInstantExtendedEnabledKeyFull[] =
+    "{google:instantExtendedEnabledKey}";
+
 GURL LinkDoctorBaseURL();
 void SetMockLinkDoctorBaseURLForTesting();
 
